Hillbertize config json
bowb)

--- a/res/config.json
+++ b/res/config.json
@@ -17,10 +17,10 @@
 
    "DOTS":
    {
-         "NUMBER_OF_DOTS":3,
-         "X":[200, 250, 300],
-         "Y":[50, 100, 150],
-         "B":[1,1,1]
+      "NUMBER_OF_DOTS":3,
+      "X":[200, 250, 300],
+      "Y":[50, 100, 150],
+      "B":[1,1,1]
    },
 
    "OBSTACLES":
@@ -36,7 +36,8 @@
       "FOCUS":400.0,
       "PIES":6.0,
       "NODES_NUM":615
-   }
+   },
+   "WINDOW": 10000
  }
 
 
