Added rooting to config
Maybe it's easier to create your own file structure and file names while loading resulting.py

--- a/res/config.json
+++ b/res/config.json
@@ -38,7 +38,13 @@
       "NODES_NUM":615
    },
    "WINDOW": 10000,
-   "NUMBER_OF_SENSORS":32
+   "NUMBER_OF_SENSORS":32,
+   "ROOTS":
+   {
+      "CSV_ROOT1":"/hilb.csv",
+      "SPECTRUM":"/spectrum.png",
+      "CSV_ROOT2":"/2hilb.csv"
+   }
  }
 
 
