--- a/res/config.json
+++ b/res/config.json
@@ -37,18 +37,7 @@
       "PIES":6.0,
       "NODES_NUM":615
    },
-   "WINDOW": 10000,
-   "NUMBER_OF_SENSORS":32,
-   "ROOTS":
-   {
-      "CSV_ROOT1":"/hilb.csv",
-      "SPECTRUM":"/spectrum.png",
-      "CSV_ROOT2":"/2hilb.csv",
-      "PREHILB":"/prehilb.png",
-      "SECOND_HILB":"/2hilb.png",
-      "INPUT":"data/final_raw_data.csv",
-      "OUTPUT":"data/result.png"
-   }
+   "WINDOW": 10000
  }
 
 
